# CellConstructor

./: README.md  RELEASE_NOTES_1.6.md  meson.build  pyproject.toml  requirements.txt  requirements2.txt  setup.py
.github/workflows/: pythonapp.yml
FModules/: get_lf.f90  get_scattering_q_grid.f90  meson.build  pyproject.toml  second_order_ASR.f90  set_tau_fast.f90  symdynph_gq_new.f90  third_order_cond.f90
UserGuide/: conf.py  gettingstarted.rst  index.rst  phonopy_integration.rst
cellconstructor/: ForceTensor.py  Methods.py  Moro_object.py  Phonons.py  SSCHA_phonopy_parser.py  Settings.py  Spectral.py  Structure.py  ThermalConductivity.py  calculators.py  symmetries.py
tests/TestConventionalCell/: conventional_cell.scf
tests/TestDiagonalizeSupercell/: CsSnI3_dyn_1  CsSnI3_dyn_10  CsSnI3_dyn_2  CsSnI3_dyn_3  CsSnI3_dyn_4  CsSnI3_dyn_5  CsSnI3_dyn_6  CsSnI3_dyn_7  CsSnI3_dyn_8  CsSnI3_dyn_9  test_fast.py  test_optimization.py
tests/TestForceTensor/: test_tensor_broadcast.py
tests/TestInterpolateDynmat/: test_tensor2_on_itself.py
tests/TestPhonopyEigenvectors/: FORCE_CONSTANTS  generate_reference.py  phonopy.yaml  reference_dynmats.npy  reference_qtot.npy  test_phonopy_eigenvectors.py
tests/TestPhonopyInput/: test_phonopy_input.py
tests/TestPrimitiveCell/: test_get_primitive_cell.py
tests/TestSymmetriesSupercell/: CsSnI3_rhombo_1  CsSnI3_rhombo_10  CsSnI3_rhombo_11  CsSnI3_rhombo_12  CsSnI3_rhombo_13  CsSnI3_rhombo_14  CsSnI3_rhombo_15  CsSnI3_rhombo_16  CsSnI3_rhombo_17  CsSnI3_rhombo_18  CsSnI3_rhombo_2  CsSnI3_rhombo_3  CsSnI3_rhombo_4  CsSnI3_rhombo_5  CsSnI3_rhombo_6  CsSnI3_rhombo_7  CsSnI3_rhombo_8  CsSnI3_rhombo_9  test_symmetries_cssni3.py
tests/TestTC/: Phonon_harmonic_properties
tests/test_extract/: optimize.py  tdin1  tdin10  tdin11  tdin12  tdin13  tdin14  tdin15  tdin16  tdin17  tdin18  tdin19  tdin2  tdin20  tdin21  tdin22  tdin23  tdin24  tdin25  tdin26  tdin27  tdin28  tdin29  tdin3  tdin30  tdin31  tdin32  tdin33  tdin34  tdin35  tdin36  tdin37  tdin38  tdin39  tdin4  tdin40  tdin5  tdin6  tdin7  tdin8  (+1 more)
