# pyproject.toml

[build-system]
# Declare the build backends and their dependencies that pip needs to build the project.
# 'meson-python' is the backend that translates pip calls to Meson.
# 'meson' is the actual build tool.
# 'ninja' is the low-level build system that Meson uses by default for rapid compilation.
requires = ["meson-python>=0.13.0", "meson>=1.0.0", "ninja>=1.10"]
build-backend = "mesonpy"

[project]
# Project metadata, which was previously in the `setup()` call of setup.py.
name = "CellConstructor"
version = "1.5.0" # Make sure this version matches meson.build
description = "Python utilities interfaced with ASE for atomic crystal analysis"
authors = [{name = "Lorenzo Monacelli"}]
readme = "README.md" 
requires-python = ">=3.8" # La versión mínima de Python soportada por tu proyecto
license = { text = "MIT" } # Define la licencia del proyecto

keywords = [ # Palabras clave opcionales para describir tu paquete
    "crystallography",
    "phonons",
    "materials science",
    "quantum espresso",
    "ab initio"
]

# Dependencias de tiempo de ejecución del proyecto.
# Estas son las dependencias que se instalarán cuando alguien haga `pip install cellconstructor`.
dependencies = [
    "numpy",
    "ase",
    "scipy",
    # Si alguna de tus extensiones Python tuviera una dependencia *adicional*
    # que no sea numpy, ase, scipy (y que no sea una librería del sistema como BLAS/LAPACK),
    # iría aquí.
]

[project.urls]
# URLs relevantes para tu proyecto.
Homepage = "https://github.com/mesonepigreco/CellConstructor"
Repository = "https://github.com/mesonepigreco/CellConstructor" # Puede ser el mismo que Homepage
# Documentation = "https://tu-documentacion.readthedocs.io/" # Si tienes documentación
# Issues = "https://github.com/mesonepigreco/CellConstructor/issues" # Para el seguimiento de errores


# --- Configuración específica de meson-python (Opcional pero útil) ---
[tool.meson-python]
# Aquí puedes pasar opciones a Meson que controlan el proceso de construcción.
# Por ejemplo, para habilitar la depuración o especificar una ruta de instalación diferente.
# Por defecto, meson-python se encarga de usar el entorno virtual si existe.

# build-args = ["-Dbuildtype=debug"] # Descomenta para una compilación de depuración
# setup-args = ["--prefix=/opt/cellconstructor"] # Para una instalación no estándar
